# lnl-prime

./: HelpCog.py  Main.db  README.md  main.py  pyproject.toml  replit_zip_error_log.txt
.cache/replit/: __replit_disk_meta.json
.cache/replit/modules/: python-3.10_v26-20230926-7459cc2.res
.cache/replit/nix/: env.json
.upm/: store.json
Cogs/: Logging.py  ModerationCog.py  Utility.py  automod.py  autoresponder.py  bot.py  errors.py  fun.py  giveaway.py  media.py  music.py  owner.py  setup.py  ticket.py  vc.py  welcome.py
Events/: events.py  events2.py
Extra/: config.py  persistent.py
Views/: embed.py  paginator.py
